--- a/style.css
+++ b/style.css
@@ -231,3 +231,35 @@ footer {
 .install-btn:hover {
   background-color: darkred;
 }
+.menu-toggle {
+  display: none;
+  font-size: 2rem;
+  color: red;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .menu-toggle {
+    display: block;
+  }
+
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    background-color: #111;
+    width: 100%;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    padding: 1rem 0;
+  }
+
+  .nav-links.nav-active {
+    display: flex;
+  }
+
+  .nav-links li {
+    text-align: center;
+    margin: 0.5rem 0;
+  }
+}
